build/log/idf_py_stdout_output_2667757
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/diego/proyectos/cr_c/build/bootloader/esp-idf/esptool_py && /home/diego/.espressif/python_env/idf5.2_py3.11_env/bin/python /home/diego/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/diego/proyectos/cr_c/build/bootloader/bootloader.bin
Bootloader binary size 0x5170 bytes. 0x2e90 bytes (36%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/esp_app_format/CMakeFiles/__idf_esp_app_format.dir/esp_app_desc.c.obj
[5/11] Linking C static library esp-idf/esp_app_format/libesp_app_format.a
[6/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/diego/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20230928/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/diego/proyectos/cr_c/build/config -I/home/diego/proyectos/cr_c/main -I/home/diego/esp/esp-idf/components/newlib/platform_include -I/home/diego/esp/esp-idf/components/freertos/config/include -I/home/diego/esp/esp-idf/components/freertos/config/include/freertos -I/home/diego/esp/esp-idf/components/freertos/config/riscv/include -I/home/diego/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/diego/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/diego/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/diego/esp/esp-idf/components/freertos/esp_additions/include -I/home/diego/esp/esp-idf/components/esp_hw_support/include -I/home/diego/esp/esp-idf/components/esp_hw_support/include/soc -I/home/diego/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/diego/esp/esp-idf/components/heap/include -I/home/diego/esp/esp-idf/components/log/include -I/home/diego/esp/esp-idf/components/soc/include -I/home/diego/esp/esp-idf/components/soc/esp32c3 -I/home/diego/esp/esp-idf/components/soc/esp32c3/include -I/home/diego/esp/esp-idf/components/hal/platform_port/include -I/home/diego/esp/esp-idf/components/hal/esp32c3/include -I/home/diego/esp/esp-idf/components/hal/include -I/home/diego/esp/esp-idf/components/esp_rom/include -I/home/diego/esp/esp-idf/components/esp_rom/include/esp32c3 -I/home/diego/esp/esp-idf/components/esp_rom/esp32c3 -I/home/diego/esp/esp-idf/components/esp_common/include -I/home/diego/esp/esp-idf/components/esp_system/include -I/home/diego/esp/esp-idf/components/esp_system/port/soc -I/home/diego/esp/esp-idf/components/esp_system/port/include/riscv -I/home/diego/esp/esp-idf/components/esp_system/port/include/private -I/home/diego/esp/esp-idf/components/riscv/include -I/home/diego/esp/esp-idf/components/lwip/include -I/home/diego/esp/esp-idf/components/lwip/include/apps -I/home/diego/esp/esp-idf/components/lwip/include/apps/sntp -I/home/diego/esp/esp-idf/components/lwip/lwip/src/include -I/home/diego/esp/esp-idf/components/lwip/port/include -I/home/diego/esp/esp-idf/components/lwip/port/freertos/include -I/home/diego/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/diego/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/diego/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/diego/esp/esp-idf/components/esp_event/include -I/home/diego/proyectos/cr_c/components/esp-mqtt/include -I/home/diego/esp/esp-idf/components/tcp_transport/include -I/home/diego/esp/esp-idf/components/esp-tls -I/home/diego/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/diego/esp/esp-idf/components/mbedtls/port/include -I/home/diego/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/diego/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/diego/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/diego/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/diego/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/diego/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/diego/esp/esp-idf/components/esp_timer/include -I/home/diego/esp/esp-idf/components/spi_flash/include -I/home/diego/esp/esp-idf/components/driver/include -I/home/diego/esp/esp-idf/components/driver/deprecated -I/home/diego/esp/esp-idf/components/driver/analog_comparator/include -I/home/diego/esp/esp-idf/components/driver/dac/include -I/home/diego/esp/esp-idf/components/driver/gpio/include -I/home/diego/esp/esp-idf/components/driver/gptimer/include -I/home/diego/esp/esp-idf/components/driver/i2c/include -I/home/diego/esp/esp-idf/components/driver/i2s/include -I/home/diego/esp/esp-idf/components/driver/ledc/include -I/home/diego/esp/esp-idf/components/driver/mcpwm/include -I/home/diego/esp/esp-idf/components/driver/parlio/include -I/home/diego/esp/esp-idf/components/driver/pcnt/include -I/home/diego/esp/esp-idf/components/driver/rmt/include -I/home/diego/esp/esp-idf/components/driver/sdio_slave/include -I/home/diego/esp/esp-idf/components/driver/sdmmc/include -I/home/diego/esp/esp-idf/components/driver/sigma_delta/include -I/home/diego/esp/esp-idf/components/driver/spi/include -I/home/diego/esp/esp-idf/components/driver/temperature_sensor/include -I/home/diego/esp/esp-idf/components/driver/touch_sensor/include -I/home/diego/esp/esp-idf/components/driver/twai/include -I/home/diego/esp/esp-idf/components/driver/uart/include -I/home/diego/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/diego/esp/esp-idf/components/esp_pm/include -I/home/diego/esp/esp-idf/components/esp_ringbuf/include -I/home/diego/proyectos/cr_c/managed_components/espressif__esp_modem/include -I/home/diego/esp/esp-idf/components/esp_netif/include -I/home/diego/esp/esp-idf/components/esp_http_client/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/diego/proyectos/cr_c=. -fmacro-prefix-map=/home/diego/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/diego/proyectos/cr_c/main/main.c
/home/diego/proyectos/cr_c/main/main.c: In function 'gprs_mqtt_task':
/home/diego/proyectos/cr_c/main/main.c:607:10: warning: unused variable 'gprs_conectado' [-Wunused-variable]
  607 |     bool gprs_conectado = false;
      |          ^~~~~~~~~~~~~~
/home/diego/proyectos/cr_c/main/main.c:606:10: warning: unused variable 'mqtt_iniciado' [-Wunused-variable]
  606 |     bool mqtt_iniciado = false;
      |          ^~~~~~~~~~~~~
/home/diego/proyectos/cr_c/main/main.c: At top level:
/home/diego/proyectos/cr_c/main/main.c:655:1: error: expected identifier or '(' before '}' token
  655 | }
      | ^
/home/diego/proyectos/cr_c/main/main.c:428:13: warning: 'gprs_is_connected' defined but not used [-Wunused-function]
  428 | static bool gprs_is_connected()
      |             ^~~~~~~~~~~~~~~~~
/home/diego/proyectos/cr_c/main/main.c:392:13: warning: 'mqtt_app_init' defined but not used [-Wunused-function]
  392 | static bool mqtt_app_init(void)
      |             ^~~~~~~~~~~~~
/home/diego/proyectos/cr_c/main/main.c:323:13: warning: 'enviar_datos_cola_mqtt' defined but not used [-Wunused-function]
  323 | static void enviar_datos_cola_mqtt()
      |             ^~~~~~~~~~~~~~~~~~~~~~
/home/diego/proyectos/cr_c/main/main.c:290:13: warning: 'rs232_lectura_tarea' defined but not used [-Wunused-function]
  290 | static void rs232_lectura_tarea(void *arg)
      |             ^~~~~~~~~~~~~~~~~~~
/home/diego/proyectos/cr_c/main/main.c:265:14: warning: 'check_internet_http' defined but not used [-Wunused-function]
  265 | static bool  check_internet_http() {
      |              ^~~~~~~~~~~~~~~~~~~
/home/diego/proyectos/cr_c/main/main.c:67:13: warning: 'gprs_conectado' defined but not used [-Wunused-variable]
   67 | static bool gprs_conectado=false;
      |             ^~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
